--- a/People/src/main/java/view/Insert.form
+++ b/People/src/main/java/view/Insert.form
@@ -238,6 +238,7 @@
     </Component>
     <Component class="org.jdatepicker.JDatePicker" name="dateOfBirth">
       <Properties>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[350, 22]"/>
         </Property>
