Read support new phonenumber

--- a/People/src/main/java/view/Read.form
+++ b/People/src/main/java/view/Read.form
@@ -263,11 +263,8 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JSpinner" name="phonenumber">
+    <Component class="javax.swing.JTextField" name="phonenumber">
       <Properties>
-        <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-          <SpinnerModel initial="0" numberType="java.lang.Integer" stepSize="1" type="number"/>
-        </Property>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Constraints>
