AddPhoneNumber in insert

--- a/People/src/main/java/view/Insert.form
+++ b/People/src/main/java/view/Insert.form
@@ -274,6 +274,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="phonenumber">
       <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="phonenumberKeyPressed"/>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="phonenumberKeyReleased"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="phonenumberKeyTyped"/>
       </Events>
